feat: Proof of concept for searching for books
Route/logic in place for searching for a book to write a review about.
Problem is that for some reason the front-end JS to render the results
is having trouble setting attributes for a link.

--- a/views/reviews/review-create.ejs
+++ b/views/reviews/review-create.ejs
@@ -62,10 +62,13 @@
                     <input type="text" class="form-control" id="book-search">
                 </div>
                 <div class="col col-md-1">
-                    <img src="/images/poweredbygoogle.png" alt="" srcset="">
+                    <img src="/images/poweredbygoogle.png" alt="Powered by Google" srcset="">
                 </div>
             </div>
+            <div class="row" id="book-search-results"></div>
         </section>
     </div>
 </div>  
+
+<%- include( '../partials/book-result') %> 
 <%- include( '../partials/footer') %> 
