--- a/views/reviews/review-create.ejs
+++ b/views/reviews/review-create.ejs
@@ -65,7 +65,9 @@
                     <img src="/images/poweredbygoogle.png" alt="Powered by Google" srcset="">
                 </div>
             </div>
-            <div class="row" id="book-search-results"></div>
+            <div class="row">
+                <div class="col" id="book-search-results"></div>
+            </div>
         </section>
     </div>
 </div>  
