--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,3 +106,12 @@ legend {
 .result.row {
   border: 1px solid black;
 }
+
+.result-image {
+  height: 100px;
+}
+
+.create-link, .create-link:hover {
+  text-decoration: none;
+  color: inherit;
+}
